# empulse

./: .buildinfo  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  api.html  genindex.html  guide.html  index.html  justfile  objects.inv  project_info.html  py-modindex.html  pyproject.toml  requirement_dev.txt  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: api.doctree  codeautolink-cache.json  guide.doctree  index.doctree  project_info.doctree
.doctrees/guide/: cost_functions.doctree  datasets_guide.doctree  instance_based_cv.doctree  metrics_guide.doctree  models_guide.doctree  preprocessing_guide.doctree  proflogit.doctree  user_defined_value_metric.doctree
.doctrees/project/: changelog.doctree  contributing.doctree  license.doctree
.doctrees/reference/: datasets.doctree  metrics.doctree  models.doctree  optimizers.doctree  samplers.doctree
.github/workflows/: documentation.yml  release.yml  test-release.yml  tests.yml
_modules/: index.html
_modules/imblearn/: base.html
_modules/sklearn/: base.html
_sources/: api.rst.txt  guide.rst.txt  index.rst.txt  project_info.rst.txt
_sources/guide/: datasets_guide.rst.txt  instance_based_cv.rst.txt  metrics_guide.rst.txt  models_guide.rst.txt  preprocessing_guide.rst.txt  proflogit.rst.txt  user_defined_value_metric.rst.txt
_sources/overview/: overview.rst.txt
_sources/project/: changelog.rst.txt  contributing.rst.txt  license.rst.txt
_sources/reference/: datasets.rst.txt  metrics.rst.txt  models.rst.txt  optimizers.rst.txt  samplers.rst.txt
_static/: documentation_options.js  versions.json
_static/css/: custom.css
cpp/: _utils.cpp
docs/: acquisition_metrics.rst  api.rst  churn_metrics.rst  conf.py  credit_scoring_metrics.rst  empulse.metrics.acquisition.html  empulse.models.b2boost.html  empulse.models.optimizers.html  empulse.models.proflogit.html  genindex.html  guide.rst  guides.rst  helper_functions.html  index.html  index.rst  metrics.html  models.html  objects.inv  other_metrics.html  other_metrics.rst  parse_changelog.py  reference.rst  requirements_docs.txt  searchindex.js
docs/_modules/: index.html
docs/_sources/: b2boost.rst.txt  churn_metrics.rst.txt  empulse.metrics.acquisition.rst.txt  empulse.metrics.churn.rst.txt  empulse.metrics.rst.txt  empulse.models.optimizers.rst.txt  empulse.rst.txt  index.rst.txt  models.rst.txt
docs/_static/: versions.json
docs/_templates/: base.rst
docs/doctrees/: acquisition_metrics.doctree  b2boost.doctree  churn_metrics.doctree  credit_scoring_metrics.doctree  empulse.doctree  environment.pickle  general_metrics.doctree  helper_functions.doctree  index.doctree  metrics.doctree  models.doctree  other_metrics.doctree  setup.doctree
docs/guide/: cost_functions.rst  datasets_guide.rst  instance_based_cv.rst  metrics_guide.rst  proflogit.rst  user_defined_value_metric.rst
docs/html/: .buildinfo  acquisition_metrics.html  b2boost.html  churn_metrics.html  credit_scoring_metrics.html  empulse.html  empulse.metrics.churn.html  empulse.metrics.credit_scoring.html  empulse.metrics.html  empulse.models.html  general_metrics.html  modules.html  py-modindex.html  search.html  setup.html
docs/overview/: overview.rst
docs/reference/: acquisition_metrics.rst  churn_metrics.rst  datasets.rst  general_metrics.rst  metrics.rst  models.rst  optimizers.rst  samplers.rst
docs/sphinxext/: override_pst_pagetoc.py
empulse/: __init__.py  _types.py
empulse/_common/: __init__.py  _parameter.py
empulse/datasets/: __init__.py  datasets.py
empulse/metrics/: __init__.py  _convex_hull.py  _validation.py  aec.py  common.py  emp.py  lift.py  max_profit.py  metric.py  mp.py  savings.py
empulse/models/: __init__.py  _cs_mixin.py  _wrapper.py  b2boost.py  bias_relabeling.py  bias_resampling.py  bias_reweighing.py  calibration.py  csclassifier.py  cslogit.py  logit.py  proflogit.py  reweighting.py  wrapper.py
empulse/optimizers/: __init__.py  generation.py  optimizer.py
empulse/samplers/: __init__.py  _strategies.py  bias_relabler.py  bias_resampler.py  cost_sampler.py  fair_relabler.py  fair_sampler.py
empulse/utils/: _sklearn_compat.py
guide/: cost_functions.html  datasets_guide.html  instance_based_cv.html  metrics_guide.html  models_guide.html  preprocessing_guide.html  proflogit.html  user_defined_value_metric.html
guide/datasets/: bank_telemarketing.html  churn_tv_subscriptions.html  credit_scoring_pakdd.html  give_me_some_credit.html
guide/metrics/: choosing_metric.html  metric_class_in_model.html  user_defined_value_metric.html
guide/models/: cost_functions.html  csboost.html  cslogit.html  proflogit.html  robustcs.html
guide/preprocessing/: bias_mitigation.html  cost_sampling.html
overview/: overview.html
project/: changelog.html  contributing.html  license.html
reference/: datasets.html  metrics.html  models.html  optimizers.html  samplers.html
reference/models/: B2BoostClassifier.html  BiasRelabelingClassifier.html  BiasResamplingClassifier.html  BiasReweighingClassifier.html  CSBoostClassifier.html  CSLogitClassifier.html  CSThresholdClassifier.html  ProfLogitClassifier.html  RobustCSClassifier.html
reference/optimizers/: Generation.html
reference/samplers/: BiasRelabler.html  BiasResampler.html  CostSensitiveSampler.html
scripts/: sklearn_compat_test_runner.py  update_sklearn_compat.py  verify-version.ps1
tests/: test_acquisition.py  test_credit_scoring.py  test_docstring.py  test_emp.py  test_metrics.py  test_proflogit.py  test_rga.py  test_user_guide.py
tests/datasets/: test_datasets.py
tests/metrics/: test_acquisition.py  test_aec.py  test_churn.py  test_convex_hull.py  test_credit_scoring.py  test_emp.py  test_lift.py  test_metric.py  test_metrics.py  test_savings.py  test_strategies.py
tests/models/: test_b2boost.py  test_bias_relabeling.py  test_bias_resampling.py  test_bias_reweighing.py  test_cost_threshold.py  test_csboost.py  test_csdecision_rule.py  test_csensemble.py  (+5 more)
(+311 files in other folders)
